k8s/debug-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  containers:
    - name: debug-container
      image: alpine:3.12
      command: ['sleep', '3600']
  restartPolicy: Always
