k8s/postgres.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres-deployment
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgresdb
        image: postgres
        resources:
          limits:
            memory: "1024Mi"   # Maximum memory allowed
            cpu: "2"         # Maximum CPU cores allowed
          requests:
            memory: "128Mi"   # Initial memory request
            cpu: "0.1"         # Initial CPU cores request
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service

metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
