k8s/ingress-service.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     spec.ingressClassName: "nginx"
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   rules:
#     - host: tindeggle.com
#     - http:
#         paths:
#           # - path: /api/.*
#           #   pathType: ImplementationSpecific
#           #   backend:
#           #     service:
#           #       name: backend-cluster-ip-service
#           #       port:
#           #         number: 4000
#           - path: /.* # react builded files
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: frontend-cluster-ip-service
#                 port:
#                   number: 3000
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-cluster-ip-service
                port:
                  number: 3000
